# midi_buddy

./: .gitignore  .gitmodules  CMakeLists.txt
assets/fonts/: font_5x10.ase  font_5x10.json  font_7x10.ase  font_7x10.json  font_italic_5x10.ase
sketches/: basic_ssd1306.fzz
src/: blink.hpp  event.hpp  main.cpp  main.cpp.bk  midi.hpp  tusb_config.hpp  usb_descriptors.cpp
src/channel_displays/: channel_displays.hpp  clock_channel_display.hpp  debug_channel_display.hpp  midi_cc_channel_display.hpp  note_channel_display.hpp  signal_channel_display.hpp
src/concurrent/: concurrent.hpp
src/containers/: containers.hpp  ring_buffer.hpp
src/cxmath/: cxmath.hpp
src/display/: channel_display.hpp  display.hpp  display_manager.hpp  display_output.hpp
src/drivers/sh1122/: sh1122.hpp
src/fixed_point/: fixed_point.hpp
src/graphics/: font.hpp  graphics.hpp  image.hpp  image_format.hpp  rich_text_renderer.hpp  shape_renderer.hpp  text_renderer.hpp
src/graphics/image_formats/: gs4_hmsb.hpp  gs4_hsb.hpp
src/messages/: message_consumer.hpp  message_queue.hpp  message_types.hpp  messages.hpp
src/midi/: midi.hpp  midi_cin.hpp  midi_clock.hpp  midi_packet.hpp  midi_receiver.hpp
src/note_tracker/: note_tracker.hpp
src/signal_generator/: signal_generator.hpp
src/time/: time.hpp
src/waves/: wave_sampler.hpp  wave_tables.hpp  waves.hpp
tools/image_gs4/: __main__.py
